[package]
name = "bera-reth"
version = "1.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-consensus = "1.0.17"
alloy-eips = "1.0.17"
alloy-genesis = "1.0.17"
alloy-network = "1.0.17"
alloy-primitives = "1.2.1"
alloy-rlp = "0.3.12"
alloy-rpc-types = "1.0.17"
alloy-rpc-types-eth = "1.0.17"
alloy-serde = "1.0.17"
alloy-signer-local = "1.0.22"
alloy-sol-macro = "1.2.1"
alloy-sol-types = "1.2.1"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
derive_more = "2.0.1"
eyre = "0.6.12"
sha2 = "0.10"

# rpc
jsonrpsee = "0.25.1"
jsonrpsee-core = "0.25.1"
jsonrpsee-proc-macros = "0.25.1"

async-trait = "0.1.88"
modular-bitfield = "0.11.2"
reth = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
serde = { version = "1.0", features = ["derive"], default-features = false }
thiserror = "2.0"
tokio = "1.46.0"
tracing = "0.1.41"

[dev-dependencies]
alloy-provider = "1.0.17"
alloy-rpc-client = "1.0.17"
eyre = "0.6.12"
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", rev = "48941e6" }
serde_json = "1.0"
test-fuzz = "7"

[features]
default = ["jemalloc"]
jemalloc = ["reth/jemalloc"]
asm-keccak = ["reth/asm-keccak"]
min-debug-logs = ["reth/min-debug-logs"]
client = []

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[package.metadata.cargo-machete]
ignored = ["modular-bitfield"]

[patch.crates-io]
# Use patched alloy-evm with system call inspection support
# Based on https://github.com/berachain/evm/pull/2
alloy-evm = { git = "https://github.com/berachain/evm", rev = "4e14d80" }

# Use patched revm with system call inspection support
# Based on https://github.com/bluealloy/revm commit 9008e93
revm = { git = "https://github.com/bluealloy/revm", rev = "9008e93" }
revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "9008e93" }
revm-bytecode = { git = "https://github.com/bluealloy/revm", rev = "9008e93" }
revm-database = { git = "https://github.com/bluealloy/revm", rev = "9008e93" }
revm-state = { git = "https://github.com/bluealloy/revm", rev = "9008e93" }
revm-interpreter = { git = "https://github.com/bluealloy/revm", rev = "9008e93" }
revm-inspector = { git = "https://github.com/bluealloy/revm", rev = "9008e93" }
revm-context = { git = "https://github.com/bluealloy/revm", rev = "9008e93" }
revm-context-interface = { git = "https://github.com/bluealloy/revm", rev = "9008e93" }
revm-database-interface = { git = "https://github.com/bluealloy/revm", rev = "9008e93" }

# [patch."https://github.com/paradigmxyz/reth"]
# reth = { path = "../reth/bin/reth" }
# reth-rpc = { path = "../reth/crates/rpc/rpc" }
# reth-basic-payload-builder = { path = "../reth/crates/payload/basic" }
# reth-chainspec = { path = "../reth/crates/chainspec" }
# reth-cli = { path = "../reth/crates/cli/cli" }
# reth-cli-commands = { path = "../reth/crates/cli/commands" }
# reth-cli-util = { path = "../reth/crates/cli/util" }
# reth-db = { path = "../reth/crates/storage/db" }
# reth-engine-local = { path = "../reth/crates/engine/local" }
# reth-engine-primitives = { path = "../reth/crates/engine/primitives" }
# reth-ethereum-cli = { path = "../reth/crates/ethereum/cli" }
# reth-engine-tree = { path = "../reth/crates/engine/tree" }
# reth-ethereum-engine-primitives = { path = "../reth/crates/ethereum/engine-primitives" }
# reth-ethereum-payload-builder = { path = "../reth/crates/ethereum/payload" }
# reth-ethereum-primitives = { path = "../reth/crates/ethereum/primitives" }
# reth-evm = { path = "../reth/crates/evm/evm" }
# reth-evm-ethereum = { path = "../reth/crates/ethereum/evm" }
# reth-network-peers = { path = "../reth/crates/net/peers" }
# reth-node-api = { path = "../reth/crates/node/api" }
# reth-node-builder = { path = "../reth/crates/node/builder" }
# reth-node-core = { path = "../reth/crates/node/core" }
# reth-payload-validator = { path = "../reth/crates/payload/validator" }
# reth-node-ethereum = { path = "../reth/crates/ethereum/node" }
# reth-payload-primitives = { path = "../reth/crates/payload/primitives" }
# reth-primitives-traits = { path = "../reth/crates/primitives-traits" }
# reth-tracing = { path = "../reth/crates/tracing" }
# reth-codecs = { path = "../reth/crates/storage/codecs" }
# reth-db-api = { path = "../reth/crates/storage/db-api" }
# reth-rpc-engine-api = { path = "../reth/crates/rpc/rpc-engine-api" }
# reth-rpc-eth-api = { path = "../reth/crates/rpc/rpc-eth-api" }
# reth-rpc-eth-types = { path = "../reth/crates/rpc/rpc-eth-types" }
# reth-rpc-convert = { path = "../reth/crates/rpc/rpc-convert" }
# reth-transaction-pool = { path = "../reth/crates/transaction-pool" }
# reth-zstd-compressors = { path = "../reth/crates/storage/zstd-compressors" }
# reth-trie-common = { path = "../reth/crates/trie/common" }
# reth-trie-db = { path = "../reth/crates/trie/db" }
# reth-trie = { path = "../reth/crates/trie/trie" }
# reth-stages-types = { path = "../reth/crates/stages/types" }
# reth-execution-types = { path = "../reth/crates/evm/execution-types" }
# reth-execution-errors = { path = "../reth/crates/evm/execution-errors" }
# reth-storage-api = { path = "../reth/crates/storage/storage-api" }
# reth-provider = { path = "../reth/crates/storage/provider" }
# reth-storage-errors = { path = "../reth/crates/storage/errors" }
# reth-e2e-test-utils = { path = "../reth/crates/e2e-test-utils" }
# reth-rpc-builder = { path = "../reth/crates/rpc/rpc-builder" }
