[package]
name = "bera-reth"
version = "1.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "bera-reth"
path = "src/main.rs"

[[bin]]
name = "bera-sequencer"
path = "src/bin/bera-sequencer.rs"

[dependencies]
alloy-consensus = "1.0.37"
alloy-eips = "1.0.37"
alloy-genesis = "1.0.37"
alloy-network = "1.0.37"
alloy-primitives = "1.3.1"
alloy-rlp = "0.3.10"
alloy-rpc-types = "1.0.37"
alloy-rpc-types-eth = "1.0.37"
alloy-serde = "1.0.37"
alloy-signer-local = "1.0.37"
alloy-sol-macro = "1.3.1"
alloy-sol-types = "1.3.1"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
derive_more = "2.0.1"
eyre = "0.6.12"
sha2 = "0.10"

# Requires minor modifications to rblib such that `FixedTransactions` is public
rblib = { path = "../rblib", features = ["optimism"] }

# rpc
jsonrpsee = "0.26.0"
jsonrpsee-core = { version = "0.26.0", features = ["server"] }
jsonrpsee-proc-macros = "0.26.0"

async-trait = "0.1.88"
modular-bitfield = "0.11.2"
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
serde = { version = "1.0", features = ["derive"], default-features = false }
thiserror = "2.0"
tokio = "1.46.0"
tokio-util = "0.7"
tracing = "0.1.41"

[dev-dependencies]
alloy-rpc-types-trace = "1.0.37"
eyre = "0.6.12"
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
revm-inspectors = "0.30.0"
serde_json = "1.0"
test-fuzz = "7"

[build-dependencies]
vergen = { version = "9.0.4", features = ["build", "cargo", "emit_and_set"] }
vergen-git2 = "1.0.7"

[features]
default = ["jemalloc"]
jemalloc = ["reth/jemalloc"]
asm-keccak = ["reth/asm-keccak"]
min-debug-logs = ["reth/min-debug-logs"]
client = []

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[package.metadata.cargo-machete]
ignored = ["modular-bitfield"]

# [patch."https://github.com/paradigmxyz/reth"]
# reth = { path = "../reth/bin/reth" }
# reth-rpc = { path = "../reth/crates/rpc/rpc" }
# reth-basic-payload-builder = { path = "../reth/crates/payload/basic" }
# reth-chainspec = { path = "../reth/crates/chainspec" }
# reth-cli = { path = "../reth/crates/cli/cli" }
# reth-cli-commands = { path = "../reth/crates/cli/commands" }
# reth-cli-util = { path = "../reth/crates/cli/util" }
# reth-db = { path = "../reth/crates/storage/db" }
# reth-engine-local = { path = "../reth/crates/engine/local" }
# reth-engine-primitives = { path = "../reth/crates/engine/primitives" }
# reth-ethereum-cli = { path = "../reth/crates/ethereum/cli" }
# reth-engine-tree = { path = "../reth/crates/engine/tree" }
# reth-ethereum-engine-primitives = { path = "../reth/crates/ethereum/engine-primitives" }
# reth-ethereum-payload-builder = { path = "../reth/crates/ethereum/payload" }
# reth-ethereum-primitives = { path = "../reth/crates/ethereum/primitives" }
# reth-evm = { path = "../reth/crates/evm/evm" }
# reth-evm-ethereum = { path = "../reth/crates/ethereum/evm" }
# reth-network-peers = { path = "../reth/crates/net/peers" }
# reth-node-api = { path = "../reth/crates/node/api" }
# reth-node-builder = { path = "../reth/crates/node/builder" }
# reth-node-core = { path = "../reth/crates/node/core" }
# reth-payload-validator = { path = "../reth/crates/payload/validator" }
# reth-node-ethereum = { path = "../reth/crates/ethereum/node" }
# reth-payload-primitives = { path = "../reth/crates/payload/primitives" }
# reth-primitives-traits = { path = "../reth/crates/primitives-traits" }
# reth-tracing = { path = "../reth/crates/tracing" }
# reth-codecs = { path = "../reth/crates/storage/codecs" }
# reth-db-api = { path = "../reth/crates/storage/db-api" }
# reth-rpc-engine-api = { path = "../reth/crates/rpc/rpc-engine-api" }
# reth-rpc-eth-api = { path = "../reth/crates/rpc/rpc-eth-api" }
# reth-rpc-eth-types = { path = "../reth/crates/rpc/rpc-eth-types" }
# reth-rpc-convert = { path = "../reth/crates/rpc/rpc-convert" }
# reth-transaction-pool = { path = "../reth/crates/transaction-pool" }
# reth-zstd-compressors = { path = "../reth/crates/storage/zstd-compressors" }
# reth-trie-common = { path = "../reth/crates/trie/common" }
# reth-trie-db = { path = "../reth/crates/trie/db" }
# reth-trie = { path = "../reth/crates/trie/trie" }
# reth-stages-types = { path = "../reth/crates/stages/types" }
# reth-execution-types = { path = "../reth/crates/evm/execution-types" }
# reth-execution-errors = { path = "../reth/crates/evm/execution-errors" }
# reth-storage-api = { path = "../reth/crates/storage/storage-api" }
# reth-provider = { path = "../reth/crates/storage/provider" }
# reth-storage-errors = { path = "../reth/crates/storage/errors" }
# reth-e2e-test-utils = { path = "../reth/crates/e2e-test-utils" }
# reth-rpc-builder = { path = "../reth/crates/rpc/rpc-builder" }
