[package]
name = "bera-reth"
version = "1.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-consensus = "1.1.2"
alloy-eips = "1.1.2"
alloy-genesis = "1.1.2"
alloy-network = "1.1.2"
alloy-primitives = "1.4.1"
alloy-rlp = "0.3.10"
alloy-rpc-types = "1.1.2"
alloy-rpc-types-eth = "1.1.2"
alloy-serde = "1.1.2"
alloy-signer-local = "1.1.2"
alloy-sol-macro = "1.4.1"
alloy-sol-types = "1.4.1"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
derive_more = "2.0.1"
eyre = "0.6.12"
sha2 = "0.10"

# rpc
jsonrpsee = "0.26.0"
jsonrpsee-core = { version = "0.26.0", features = ["server"] }
jsonrpsee-proc-macros = "0.26.0"

async-trait = "0.1.88"
modular-bitfield = "0.11.2"
reth = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-optimism-flashblocks = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
revm-context-interface = "13.1.0"
serde = { version = "1.0", features = ["derive"], default-features = false }
thiserror = "2.0"
tokio = "1.46.0"
tracing = "0.1.41"

[dev-dependencies]
alloy-provider = "1.1.2"
alloy-rpc-client = "1.1.2"
alloy-rpc-types-trace = "1.1.2"
eyre = "0.6.12"
futures-util = { version = "0.3", default-features = false }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", rev = "536bebfcd" }
revm-inspectors = "0.33.0"
serde_json = "1.0"
test-fuzz = "7"

[build-dependencies]
vergen = { version = "9.0.4", features = ["build", "cargo", "emit_and_set"] }
vergen-git2 = "1.0.7"

[features]
default = ["jemalloc"]
jemalloc = ["reth/jemalloc"]
asm-keccak = ["reth/asm-keccak"]
min-debug-logs = ["reth/min-debug-logs"]
client = []

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[package.metadata.cargo-machete]
ignored = ["modular-bitfield"]

[patch."https://github.com/paradigmxyz/reth"]
reth = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-rpc = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-basic-payload-builder = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-chainspec = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-cli = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-cli-commands = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-cli-util = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-db = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-engine-local = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-engine-primitives = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-errors = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-ethereum-cli = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-engine-tree = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-ethereum-engine-primitives = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-ethereum-payload-builder = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-ethereum-primitives = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-evm = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-evm-ethereum = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-network-peers = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-node-api = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-node-builder = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-node-core = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-payload-validator = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-node-ethereum = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-payload-primitives = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-primitives-traits = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-tracing = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-codecs = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-db-api = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-rpc-engine-api = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-rpc-eth-api = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-rpc-eth-types = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-rpc-convert = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-transaction-pool = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-zstd-compressors = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-trie-common = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-trie-db = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-trie = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-stages-types = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-execution-types = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-execution-errors = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-storage-api = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-provider = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-storage-errors = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-e2e-test-utils = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-rpc-builder = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-optimism-flashblocks = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-optimism-rpc = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
reth-consensus-common = { git = "https://github.com/rezbera/reth", branch = "rezbera/modular-flashblocks" }
